--- a/AndroidClient/Hypechat/app/src/main/res/layout/activity_profile.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/activity_profile.xml
@@ -8,96 +8,182 @@
     android:orientation="vertical"
     android:weightSum="100">
 
-    <RelativeLayout
+    <LinearLayout
+        android:background="@drawable/background_45"
+        android:layout_weight="50"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:orientation="vertical">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_profile"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="50">
+            android:layout_height="wrap_content"
+            android:minHeight="?attr/actionBarSize"
+            android:theme="@style/AppToolbar"/>
 
-            <LinearLayout
-                android:background="@drawable/background_45"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="vertical">
-                <android.support.v7.widget.Toolbar
-                    android:id="@+id/toolbar_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:minHeight="?attr/actionBarSize"
-                    android:theme="@style/AppToolbar"/>
-                <ImageView
-                    android:layout_marginTop="45dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/android_test"/>
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Profile Test"
-                    android:textColor="#fff"
-                    android:textStyle="bold"
-                    android:textSize="21sp"/>
-            </LinearLayout>
-        </RelativeLayout>
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="45dp"
+            android:id="@+id/profile_image"
+            android:contentDescription="@string/usr_image_desc"
+            android:src="@drawable/no_image" />
 
-        <LinearLayout
+        <ProgressBar
+            android:id="@+id/progressBar_profile_image"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_marginTop="45dp"
+            android:layout_width="match_parent"
+            android:visibility="gone"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="5dp"
+            android:id="@+id/profile_text_name"
+            android:textColor="#fff"
+            android:textSize="21sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <ScrollView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:orientation="vertical"
             android:layout_gravity="center"
             android:layout_marginTop="45dp"
             android:layout_weight="50">
+
             <LinearLayout
-                android:orientation="horizontal"
-                android:paddingLeft="50dp"
-                android:paddingStart="50dp"
-                android:paddingRight="50dp"
-                android:paddingEnd="50dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_email_24dp"/>
-                <TextView
-                    android:textStyle="bold"
-                    android:layout_gravity="center_vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingStart="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingEnd="20dp"
-                    android:text="test@gmail.com"
-                     />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="25dp"
-                android:orientation="horizontal"
-                android:paddingLeft="50dp"
-                android:paddingStart="50dp"
-                android:paddingRight="50dp"
-                android:paddingEnd="50dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="36dp"
-                    android:layout_height="36dp"
-                    android:src="@drawable/ic_phone_android_24dp"/>
-                <TextView
-                    android:textStyle="bold"
+                android:orientation="vertical">
 
-                    android:layout_gravity="center_vertical"
+                <ProgressBar
+                    android:id="@+id/progressBar_name"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    style="?android:attr/progressBarStyle"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <RelativeLayout
+                    android:orientation="horizontal"
+                    android:paddingLeft="80dp"
+                    android:paddingStart="80dp"
+                    android:paddingRight="50dp"
+                    android:focusableInTouchMode="true"
+                    android:paddingEnd="50dp"
+                    android:id="@+id/rl_name"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:paddingLeft="20dp"
-                    android:paddingStart="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingEnd="20dp"
-                    android:text="+15 5342 3155"/>
+                    >
+
+                    <ImageView
+                        android:id="@+id/user_image_name"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:contentDescription="@string/image_desc"
+                        android:src="@drawable/user"/>
+                    <EditText
+                        android:textStyle="bold"
+                        android:background="@android:color/transparent"
+                        android:id="@+id/name_text"
+                        android:layout_toRightOf="@+id/user_image_name"
+                        android:layout_toEndOf="@+id/user_image_name"
+                        android:layout_centerInParent="true"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="20dp"
+                        android:hint="@string/name"
+                        android:paddingStart="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingEnd="20dp"
+                        android:imeOptions="actionDone"
+                        android:textColor="@android:color/darker_gray"
+                        tools:ignore="Autofill"
+                        android:inputType="text|textPersonName" />
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_toRightOf="@+id/name_text"
+                        android:layout_alignParentEnd="true"
+                        android:layout_centerInParent="true"
+                        android:contentDescription="@string/image_desc"
+                        android:src="@android:drawable/ic_menu_edit"
+                        android:onClick="setFocusOnNameEditText"
+                        android:layout_alignParentRight="true"
+                        android:layout_toEndOf="@+id/name_text" />
+                </RelativeLayout>
+
+                <ProgressBar
+                    android:id="@+id/progressBar_lastName"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_marginTop="25dp"
+                    android:layout_gravity="center"
+                    android:visibility="gone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <RelativeLayout
+                    android:layout_marginTop="25dp"
+                    android:id="@+id/rl_last_name"
+                    android:orientation="horizontal"
+                    android:focusableInTouchMode="true"
+                    android:paddingLeft="80dp"
+                    android:paddingStart="80dp"
+                    android:paddingRight="50dp"
+                    android:paddingEnd="50dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <ImageView
+                        android:id="@+id/user_image_last_name"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp"
+                        android:layout_centerInParent="true"
+                        android:layout_alignParentStart="true"
+                        android:contentDescription="@string/image_desc"
+                        android:src="@drawable/user"
+                        android:layout_alignParentLeft="true" />
+
+                    <EditText
+                        android:textStyle="bold"
+                        android:id="@+id/last_name_text"
+                        android:background="@android:color/transparent"
+                        android:textColor="@android:color/darker_gray"
+                        android:layout_toRightOf="@+id/user_image_last_name"
+                        android:layout_toEndOf="@+id/user_image_last_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:paddingLeft="20dp"
+                        android:paddingStart="20dp"
+                        android:paddingRight="20dp"
+                        android:paddingEnd="20dp"
+                        android:hint="@string/last_name"
+                        android:imeOptions="actionDone"
+                        android:layout_centerInParent="true"
+                        tools:ignore="Autofill"
+                        android:inputType="text|textPersonName" />
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerInParent="true"
+                        android:layout_toEndOf="@+id/last_name_text"
+                        android:layout_toRightOf="@+id/last_name_text"
+                        android:contentDescription="@string/image_desc"
+                        android:onClick="setFocusOnLastNameEditText"
+                        android:src="@android:drawable/ic_menu_edit" />
+
+                </RelativeLayout>
             </LinearLayout>
-        </LinearLayout>
+        </ScrollView>
 </LinearLayout>
