--- a/AndroidClient/Hypechat/app/src/main/res/layout/nav_header_main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/nav_header_main.xml
@@ -19,6 +19,7 @@
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
+        android:popupBackground="@color/colorPrimaryDark"
         android:layout_height="match_parent" />
 
 
