--- a/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/menu/main.xml
@@ -7,6 +7,7 @@
         android:orderInCategory="100"
         android:title="@string/organizations"
         android:icon="@drawable/organizaciones2"
+        android:visible="false"
         app:showAsAction="always" />
 
     <item
