--- a/AndroidClient/Hypechat/app/src/main/res/layout/fragment_chat_channel.xml
+++ b/AndroidClient/Hypechat/app/src/main/res/layout/fragment_chat_channel.xml
@@ -7,24 +7,37 @@
     tools:context=".fragments.ChatChannelFragment">
 
     <android.support.constraint.ConstraintLayout
+        android:id="@+id/chat_channel_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/reyclerview_message_list"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent">
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v4.widget.SwipeRefreshLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/swipeContainer"
+            android:layout_marginBottom="48dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/reyclerview_message_list"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:descendantFocusability="beforeDescendants"
+            android:clipToPadding="false"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent">
+        </android.support.v7.widget.RecyclerView>
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
     <!-- A horizontal line between the chatbox and RecyclerView -->
     <View
         android:layout_width="0dp"
         android:layout_height="2dp"
         android:background="#dfdfdf"
+        android:id="@+id/view_chatbox"
         android:layout_marginBottom="0dp"
         app:layout_constraintBottom_toTopOf="@+id/layout_chatbox"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -50,18 +63,19 @@
             android:layout_marginRight="16dp"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:maxLines="6"/>
+            android:layout_height="wrap_content" />
 
         <ImageButton
             android:id="@+id/button_chatbox_send"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="center"
             android:scaleType="fitCenter"
+            android:layout_marginRight="10dp"
             android:padding="20dp"
-            android:layout_marginHorizontal="10dp"
-            android:background="@drawable/ic_send_24dp"/>
+            android:background="@drawable/send"
+            android:tint="@color/colorAccentLight"
+            android:layout_marginEnd="10dp" />
 
     </LinearLayout>
 
